package com.ktx;

import com.ktx.config.JpaUtil;
import com.ktx.controller.*;
import com.ktx.model.NhanVien;
import com.ktx.repository.*;
import com.ktx.repository.impl.*;
import com.ktx.service.*;
import com.ktx.service.impl.*;
import com.ktx.view.*;
import com.ktx.view.thietbi.TrangThietBiPanel;
import com.formdev.flatlaf.themes.FlatMacLightLaf;

import javax.swing.*;
import java.awt.*;

/**
 * Điểm khởi động của ứng dụng Quản lý Ký túc xá.
 *
 * <p>Thứ tự khởi tạo:</p>
 * <ol>
 *   <li>Repository → Service (DI thuần)</li>
 *   <li>Hiển thị màn hình đăng nhập</li>
 *   <li>Sau đăng nhập thành công → tạo MainFrame + tất cả Panel + Controller</li>
 *   <li>Đăng ký shutdown hook để đóng JPA khi thoát</li>
 * </ol>
 */
public class App {

    public static void main(String[] args) {
        // ---- FlatLaf Modern L&F ----
        FlatMacLightLaf.setup();
        
        // Global UI refinement
        UIManager.put("Button.arc", 12);
        UIManager.put("Component.arc", 12);
        UIManager.put("TextComponent.arc", 12);
        UIManager.put("CheckBox.arc", 4);
        UIManager.put("ProgressBar.arc", 12);
        
        UIManager.put("ScrollBar.width", 10);
        UIManager.put("ScrollBar.trackArc", 10);
        UIManager.put("ScrollBar.thumbArc", 10);
        UIManager.put("ScrollBar.trackInsets", new Insets(2, 2, 2, 2));
        
        UIManager.put("Component.focusWidth", 1);
        UIManager.put("Component.innerFocusWidth", 1);
        UIManager.put("Button.innerFocusWidth", 1);
        
        UIManager.put("defaultFont", new Font("Segoe UI", Font.PLAIN, 16));

        // Đóng JPA khi JVM tắt
        Runtime.getRuntime().addShutdownHook(new Thread(JpaUtil::shutdown));

        SwingUtilities.invokeLater(App::startLogin);
    }

    // ----------------------------------------------------------------
    // Bước 1: Khởi động màn hình đăng nhập
    // ----------------------------------------------------------------
    private static void startLogin() {
        // --- Repositories ---
        NhanVienRepository nhanVienRepo = new NhanVienRepositoryImpl();

        // --- Services ---
        AuthService authService = new AuthServiceImpl(nhanVienRepo);

        // --- View ---
        DangNhapFrame loginFrame = new DangNhapFrame();

        // --- Controller (callback mở MainFrame sau login) ---
        new AuthController(loginFrame, authService,
                user -> SwingUtilities.invokeLater(() -> startMain(user)));

        loginFrame.setVisible(true);
    }

    // ----------------------------------------------------------------
    // Bước 2: Khởi động MainFrame sau khi đăng nhập thành công
    // ----------------------------------------------------------------
    private static void startMain(NhanVien user) {
        // ---- Repositories ----
        NhanVienRepository nhanVienRepo = new NhanVienRepositoryImpl();
        SinhVienRepository sinhVienRepo = new SinhVienRepositoryImpl();
        PhongRepository    phongRepo    = new PhongRepositoryImpl();
        HopDongRepository  hopDongRepo  = new HopDongRepositoryImpl();
        ThongKeRepository  thongKeRepo  = new ThongKeRepositoryImpl();
        DayNhaRepository   dayNhaRepo   = new DayNhaRepositoryImpl();
        TrangThietBiRepository tbRepo   = new TrangThietBiRepositoryImpl();
        HoaDonTienPhongRepository hdtpRepo = new HoaDonTienPhongRepositoryImpl();
        CauHinhGiaRepository   giaRepo    = new CauHinhGiaRepositoryImpl();
        AuditLogRepository     auditRepo  = new AuditLogRepositoryImpl();

        // ---- Services ----
        AuditLogService      auditSvc   = new AuditLogServiceImpl(auditRepo);
        SinhVienService sinhVienSvc = new SinhVienServiceImpl(sinhVienRepo, hopDongRepo, auditSvc);
        PhongService    phongSvc    = new PhongServiceImpl(phongRepo);
        HopDongService  hopDongSvc  = new HopDongServiceImpl(hopDongRepo, sinhVienRepo, phongRepo, auditSvc);
        ThongKeService  thongKeSvc  = new ThongKeServiceImpl(thongKeRepo);
        TrangThietBiService tbSvc   = new TrangThietBiServiceImpl(tbRepo, phongRepo);
        CauHinhGiaService   giaSvc   = new CauHinhGiaServiceImpl(giaRepo);
        HoaDonTienPhongService hdtpSvc = new HoaDonTienPhongServiceImpl(hdtpRepo, hopDongRepo, phongRepo);
        HoaDonService       hoaDonSvc = new HoaDonServiceImpl(giaSvc, auditSvc);
        NhanVienService     nhanVienSvc = new NhanVienServiceImpl(nhanVienRepo);

        // ---- Views ----
        DashboardPanel        dashPanel = new DashboardPanel();
        QuanLySinhVienPanel   svPanel   = new QuanLySinhVienPanel();
        QuanLyPhongPanel      phongPanel= new QuanLyPhongPanel();
        LapHopDongPanel       hdPanel   = new LapHopDongPanel();
        QuanLyHoaDonPanel     hdnPanel  = new QuanLyHoaDonPanel();
        TrangThietBiPanel     tbPanel   = new TrangThietBiPanel();
        QuanLyTienPhongPanel  tpPanel   = new QuanLyTienPhongPanel();
        QuanLyNhanVienPanel   nvPanel   = new QuanLyNhanVienPanel();
        QuanLyGiaPanel        giaPanel  = new QuanLyGiaPanel();
        NhatKyHeThongPanel    auditPanel= new NhatKyHeThongPanel();

        // ---- Controllers ----
        DashboardController  dashCtrl = new DashboardController(dashPanel, thongKeSvc);
        new SinhVienController(svPanel,   sinhVienSvc);
        new PhongController   (phongPanel, phongSvc, dayNhaRepo);
        new HopDongController (hdPanel, hopDongSvc, sinhVienSvc, phongSvc, user);
        new HoaDonController  (hdnPanel, hoaDonSvc, user.getMaNV(), user.getVaiTro());
        new TrangThietBiController(tbPanel, tbSvc);
        new HoaDonTienPhongController(tpPanel, hdtpSvc, hopDongRepo, user.getMaNV());
        new NhanVienController(nvPanel, nhanVienSvc);
        new CauHinhGiaController(giaPanel, giaSvc);
        new AuditLogController(auditPanel, auditSvc);

        // ---- MainFrame ----
        MainFrame frame = new MainFrame(user);
        frame.setPanel(dashPanel,  MainFrame.CARD_DASHBOARD);
        frame.setPanel(svPanel,    MainFrame.CARD_SINH_VIEN);
        frame.setPanel(phongPanel, MainFrame.CARD_PHONG);
        frame.setPanel(hdPanel,    MainFrame.CARD_HOP_DONG);
        frame.setPanel(hdnPanel,   MainFrame.CARD_HOA_DON);
        frame.setPanel(tbPanel,    MainFrame.CARD_THIET_BI);
        frame.setPanel(tpPanel,    MainFrame.CARD_TIEN_PHONG);
        if ("Manager".equalsIgnoreCase(user.getVaiTro())) {
            frame.setPanel(nvPanel, MainFrame.CARD_NHAN_VIEN);
            frame.setPanel(giaPanel, MainFrame.CARD_GIA);
            frame.setPanel(auditPanel, MainFrame.CARD_AUDIT_LOG);
        }

        // Refresh dashboard mỗi khi chuyển sang tab (dùng addDangXuatListener tác động phụ)
        // Đăng xuất: đóng MainFrame và quay lại màn hình login
        frame.addDangXuatListener(e -> {
            int ok = JOptionPane.showConfirmDialog(frame, "Bạn có chắc muốn đăng xuất?",
                    "Đăng xuất", JOptionPane.YES_NO_OPTION);
            if (ok == JOptionPane.YES_OPTION) {
                frame.dispose();
                SwingUtilities.invokeLater(App::startLogin);
            }
        });

        frame.setVisible(true);
    }
}
