package com.ktx.view;

import com.formdev.flatlaf.extras.FlatSVGIcon;
import javax.swing.*;
import javax.swing.border.Border;
import javax.swing.table.DefaultTableCellRenderer;
import javax.swing.table.JTableHeader;
import java.awt.*;
import java.awt.event.MouseAdapter;
import java.awt.event.MouseEvent;

/**
 * Bộ công cụ giao diện dùng chung toàn ứng dụng.
 * Định nghĩa bảng màu, font chữ và helper tạo component đã được style sẵn.
 */
public final class UITheme {

    private UITheme() {}

    // ================================================================
    // Colour palette - Modern enhanced theme
    // ================================================================
    public static final Color SIDEBAR_BG      = new Color(15, 23, 42);   // slate-900
    public static final Color SIDEBAR_HOVER   = new Color(30, 41, 59);   // slate-800
    public static final Color SIDEBAR_ACTIVE  = new Color(99, 102, 241); // indigo-500
    public static final Color SIDEBAR_TEXT    = new Color(203, 213, 225); // slate-300
    public static final Color SIDEBAR_TEXT_ACTIVE = Color.WHITE;

    public static final Color CONTENT_BG  = new Color(248, 250, 252);   // slate-50
    public static final Color CARD_BG     = Color.WHITE;

    public static final Color BLUE    = new Color(59, 130, 246);  // blue-500
    public static final Color INDIGO  = new Color(99, 102, 241);  // indigo-500
    public static final Color GREEN   = new Color(34, 197, 94);   // green-500
    public static final Color AMBER   = new Color(245, 158, 11);  // amber-500
    public static final Color RED     = new Color(239, 68, 68);   // red-500
    public static final Color SLATE   = new Color(100, 116, 139); // slate-500

    public static final Color TEXT_PRIMARY   = new Color(15, 23, 42);   // slate-900
    public static final Color TEXT_SECONDARY = new Color(71, 85, 105);  // slate-600
    public static final Color BORDER_COLOR   = new Color(226, 232, 240); // slate-200

    public static final Color TABLE_STRIPE   = new Color(249, 250, 251); // gray-50
    public static final Color TABLE_HEADER_BG= new Color(241, 245, 249); // slate-100
    public static final Color TABLE_SELECT   = new Color(224, 231, 255); // indigo-100
    public static final Color ACCENT_COLOR   = INDIGO;

    // ================================================================
    // Fonts - Enhanced typography
    // ================================================================
    public static final Font FONT_TITLE = new Font("Segoe UI", Font.BOLD, 28); // Scaled down from 32
    public static final Font FONT_H2    = new Font("Segoe UI", Font.BOLD, 24);
    public static final Font FONT_BODY  = new Font("Segoe UI", Font.PLAIN, 16);
    public static final Font FONT_SMALL = new Font("Segoe UI", Font.PLAIN, 14);
    public static final Font FONT_BOLD  = new Font("Segoe UI", Font.BOLD, 16);
    public static final Font FONT_MONO  = new Font("Consolas", Font.PLAIN, 15);

    // ================================================================
    // Border helpers - Enhanced with rounded corners
    // ================================================================
    public static Border cardBorder() {
        return BorderFactory.createCompoundBorder(
                BorderFactory.createLineBorder(BORDER_COLOR, 1),
                BorderFactory.createEmptyBorder(20, 20, 20, 20));
    }

    public static Border roundedBorder(int radius) {
        return BorderFactory.createCompoundBorder(
                BorderFactory.createLineBorder(BORDER_COLOR, 1),
                BorderFactory.createEmptyBorder(radius, radius, radius, radius));
    }

    public static Border emptyBorder(int v, int h) {
        return BorderFactory.createEmptyBorder(v, h, v, h);
    }

    // ================================================================
    // Component helpers
    // ================================================================
    /** Nút màu phẳng với hover effect và thiết kế hiện đại. */
    public static JButton button(String text, Color bg) {
        JButton b = new JButton(text);
        b.setBackground(bg);
        b.setForeground(Color.WHITE);
        b.setFont(FONT_BOLD);
        b.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
        b.putClientProperty("JButton.buttonType", "roundRect");
        b.putClientProperty("FlatLaf.style", "margin: 6,16,6,16"); // Slightly more compact
        b.setFocusPainted(false);
        return b;
    }

    /** Nút có icon hiện đại. */
    public static JButton iconButton(String svgPath, int size) {
        JButton b = new JButton(new FlatSVGIcon(svgPath, size, size));
        b.putClientProperty("JButton.buttonType", "toolBarButton");
        b.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
        return b;
    }

    /** Label tiêu đề trang. */
    public static JLabel pageTitle(String text) {
        JLabel l = new JLabel(text);
        l.setFont(FONT_TITLE);
        l.setForeground(TEXT_PRIMARY);
        l.putClientProperty("FlatLaf.style", "font: bold 150% $h1.font"); // Scaled down from 200%
        return l;
    }

    /** TextField đã style với thiết kế hiện đại. */
    public static JTextField textField(int cols) {
        return textField(cols, "Tìm kiếm...");
    }

    public static JTextField textField(int cols, String placeholder) {
        JTextField tf = new JTextField(cols);
        tf.setFont(FONT_BODY);
        tf.setForeground(TEXT_PRIMARY);
        tf.putClientProperty("JTextField.placeholderText", placeholder);
        tf.putClientProperty("JTextField.showClearButton", true);
        tf.putClientProperty("FlatLaf.style", "margin: 4,10,4,10; arc: 10");
        
        // Ensure the search box has a solid width and height
        tf.setPreferredSize(new Dimension(250, 42)); 
        tf.setMinimumSize(new Dimension(200, 42));
        return tf;
    }

    /** JScrollPane sạch, không viền. */
    public static JScrollPane cleanScrollPane(JTable table) {
        JScrollPane sp = new JScrollPane(table);
        sp.setBorder(BorderFactory.createLineBorder(BORDER_COLOR));
        sp.getViewport().setBackground(CARD_BG);
        return sp;
    }

    /** Áp dụng style hiện đại cho JTable. */
    public static void styleTable(JTable table) {
        table.setFont(FONT_BODY);
        table.setRowHeight(48); // Even larger rows
        table.setShowHorizontalLines(true);
        table.setShowVerticalLines(false);
        table.setGridColor(BORDER_COLOR);
        table.setIntercellSpacing(new Dimension(0, 0));
        table.setSelectionBackground(TABLE_SELECT);
        table.setSelectionForeground(TEXT_PRIMARY);

        // Header
        JTableHeader header = table.getTableHeader();
        header.setFont(FONT_BOLD);
        header.setBackground(TABLE_HEADER_BG);
        header.setForeground(TEXT_PRIMARY);
        header.setReorderingAllowed(false);
        header.setPreferredSize(new Dimension(1, 52)); // Larger header
        
        Border headerBorder = BorderFactory.createMatteBorder(0, 0, 1, 0, BORDER_COLOR);
        header.setBorder(headerBorder);
    }

    /** Panel card trắng có shadow nhẹ và thiết kế hiện đại. */
    public static JPanel card() {
        JPanel p = new JPanel();
        p.setBackground(CARD_BG);
        p.setBorder(BorderFactory.createLineBorder(BORDER_COLOR, 1));
        return p;
    }

    /** Separator ngang mỏng. */
    public static JSeparator separator() {
        JSeparator s = new JSeparator();
        s.setForeground(BORDER_COLOR);
        s.setMaximumSize(new Dimension(Integer.MAX_VALUE, 1));
        return s;
    }
}
